Archive2/f5/d96699f6068b5b/output
main.cpp:16:12: error: field 'm_entity' has incomplete type 'Entity'
     Entity m_entity;
            ^
